database fetching done for studentrecords page

--- a/templates/studentrecord.html
+++ b/templates/studentrecord.html
@@ -30,9 +30,9 @@
                         {% for record in Studentrec %}
                         <tr>
                             <th scope="row">{{record['prn']}}</th>
-                            <td>{{record['name']}}</td>
+                            <td>{{record['studentname']}}</td>
                       
-                            <td>{{record['count']}}</td>
+                            <td>{{record['attended']}}</td>
                         </tr>
                       {% endfor %}
                         
